# sam-track

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: new-release.md
.github/workflows/: ci.yml
src/sam_track/: __init__.py  __main__.py  auth.py  cli.py  reconciliation.py  tracker.py  utils.py  video.py
src/sam_track/inputs/: __init__.py  seg.py
src/sam_track/outputs/: __init__.py  bbox.py  seg.py  slp.py
src/sam_track/prompts/: __init__.py  base.py  mask.py  pose.py  roi.py  text.py
tests/: test_cli.py  test_reconciliation.py  test_tracker.py  test_uc_coverage.py
tests/data/: first_frame_mice.yml  labels.15node.first_frame.slp  labels.15node.v004.gt_frames=0.gt_tracks=False.pr_frames=full.pr_tracks=False.slp  labels.15node.v004.gt_frames=10.gt_tracks=False.pr_frames=0.pr_tracks=False.slp  labels.15node.v004.gt_frames=10.gt_tracks=True.pr_frames=0.pr_tracks=False.slp  labels.15node.v004.gt_frames=10.gt_tracks=True.pr_frames=full.pr_tracks=False.slp  labels.3node.first_frame.slp
tests/inputs/: __init__.py  test_seg.py
tests/outputs/: __init__.py  test_bbox.py  test_seg.py  test_slp.py
tests/prompts/: __init__.py  test_mask.py  test_pose.py  test_roi.py  test_text.py
